# 25C2-cargo-y-descargo-calandria

./: .gitignore  AUDIO_WALKTHROUGH.md  Cargo.toml  README.md  users.txt
RoomRTC/: Cargo.toml  client.conf  server.conf
RoomRTC/src/: config.rs  logger.rs  main.rs  signaling_main.rs
RoomRTC/src/client/: mod.rs  p2p_client.rs  signaling_client.rs  webrtc_service.rs
RoomRTC/src/server/: mod.rs  protocol.rs  state.rs  tls.rs  types.rs  validation.rs
RoomRTC/src/server/handlers/: auth.rs  context.rs  mod.rs  presence.rs  signaling.rs
RoomRTC/src/ui/: launcher.rs  mod.rs  screen_manager.rs  theme.rs
RoomRTC/src/ui/screens/: create_meet.rs  join_meet.rs  lobby.rs  login.rs  mod.rs  (+2 more)
webrtc/: Cargo.toml
webrtc/src/: lib.rs  sdp_helper.rs
webrtc/src/audio/: audio_capture.rs  audio_playback.rs  mod.rs  opus_codec.rs
webrtc/src/camera/: camera_const.rs  camera_err.rs  camera_opencv.rs  mod.rs
webrtc/src/crypto/: mod.rs  srtp.rs
webrtc/src/ice/: agent.rs  candidate.rs  connectivity.rs  gathering.rs  mod.rs  pair.rs
webrtc/src/protocols/: file_transfer.rs  mod.rs
webrtc/src/rtc/: mod.rs  peer_connection_error.rs  rtc_dtls.rs  rtc_err.rs  rtc_peer_connection.rs  rtc_sctp.rs  sdp_negotiation.rs
webrtc/src/stun/: attributes.rs  binding.rs  client.rs  message.rs  mod.rs
webrtc/src/worker_thread/: camera_thread.rs  decoder_thread.rs  encode_thread.rs  local_preview_thread.rs  media_metrics.rs  mod.rs  rtc_rtp_sender_thread.rs  rtcp_reporter_thread.rs  rtp_receiver_thread.rs  worker_audio.rs  worker_media.rs
webrtc/tests/: integration_offer_answer.rs
(+76 files in other folders)
