[package]
name = "roomrtc"
version = "0.1.0"
edition = "2024"
default-run = "roomrtc"

[dependencies]
eframe = "0.29"
serde = { version = "1.0", features = ["derive"] }
room_rtc = { path = "../webrtc", package = "room-rtc" }
opencv = "0.96"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
base64 = "0.21"
rand = "0.8"

[[bin]]
name = "roomrtc"
path = "src/main.rs" 

[[bin]]
name = "signaling_server"
path = "src/signaling_main.rs"
